--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,21 +15,24 @@
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jomhuria&family=Work+Sans:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Jomhuria&family=Work+Sans:wght@100;200;300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
 
 </head>
+
 <body>
     <!--Start Header-->
     <div class="header">
         <div class="container">
             <img class="logo" src="Images/logo.png" alt="">
             <div class="links">
-                <span class="icon">
+                <span id="icon">
                     <span></span>
                     <span></span>
                     <span></span>
                 </span>
-                <ul>
+                <ul class="PageLinks">
                     <li><a href="#services">Services</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#aAbout">About</a></li>
@@ -37,7 +41,7 @@
             </div>
         </div>
     </div>
-    <!--End Header-->    
+    <!--End Header-->
     <!--Start Landing Section-->
     <div class="landing">
         <div class="intro-text">
@@ -47,25 +51,25 @@
     </div>
     <!--End Landing Section-->
     <!--Start Feature section-->
-        <div class="features">
-            <div class="container">
-                <div class="feat">
-                     <i class="fas fa-magic fa-3x"></i>
-                     <h3>Tell Us Your Idea</h3>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
-                </div>
-                <div class="feat">
-                     <i class="far fa-gem fa-3x"></i>
-                     <h3>We Will Do All The Work</h3>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
-                </div>
-                <div class="feat">
-                     <i class="fas fa-globe-asia fa-3x"></i>
-                     <h3>Your Product is Worldwide</h3>
-                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
-                </div>
+    <div class="features">
+        <div class="container">
+            <div class="feat">
+                <i class="fas fa-magic fa-3x"></i>
+                <h3>Tell Us Your Idea</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+            </div>
+            <div class="feat">
+                <i class="far fa-gem fa-3x"></i>
+                <h3>We Will Do All The Work</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
+            </div>
+            <div class="feat">
+                <i class="fas fa-globe-asia fa-3x"></i>
+                <h3>Your Product is Worldwide</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut lab</p>
             </div>
         </div>
+    </div>
     <!--End Feature section-->
     <!--Start Services-->
     <div class="services" id="services">
@@ -79,7 +83,8 @@
                         <i class="fas fa-palette fa-2x"></i>
                         <div class="text">
                             <h3>Graphic Design</h3>
-                            <p>Graphic design is the process of visual communication and problem-solving using one or more of typography, 
+                            <p>Graphic design is the process of visual communication and problem-solving using one or
+                                more of typography,
                                 photography and illustration.</p>
                         </div>
                     </div>
@@ -89,19 +94,20 @@
                         <i class="fab fa-sketch fa-2x"></i>
                         <div class="text">
                             <h3>UI & UX</h3>
-                            <p>Process of enhancing user satisfaction with a product by improving the usability, 
+                            <p>Process of enhancing user satisfaction with a product by improving the usability,
                                 accessibility, and pleasure provided in the interaction.</p>
                         </div>
                     </div>
                     <!--End Service-->
                 </div>
-                <div class="col"> 
+                <div class="col">
                     <div class="srv">
                         <!--Start Service-->
                         <i class="fas fa-vector-square fa-2x"></i>
                         <div class="text">
                             <h3>Web Design</h3>
-                            <p>Web design encompasses many different skills and disciplines in the production and maintenance of websites.</p>
+                            <p>Web design encompasses many different skills and disciplines in the production and
+                                maintenance of websites.</p>
                         </div>
                     </div>
                     <!--End Service-->
@@ -110,7 +116,8 @@
                         <i class="fas fa-pencil-ruler fa-2x"></i>
                         <div class="text">
                             <h3>Web Development</h3>
-                            <p>Web development is a broad term for the work involved in developing a web site for the Internet or an intranet.</p>
+                            <p>Web development is a broad term for the work involved in developing a web site for the
+                                Internet or an intranet.</p>
                         </div>
                     </div>
                     <!--End Service-->
@@ -134,45 +141,52 @@
                     <img src="Images/portfolio-1.jpg" alt="">
                     <div class="info">
                         <h3>Project Here</h3>
-                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many
+                            surprising and.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="Images/portfolio-2.jpg" alt="">
                     <div class="info">
                         <h3>Project Here</h3>
-                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many
+                            surprising and.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="Images/portfolio-3.jpg" alt="">
                     <div class="info">
                         <h3>Project Here</h3>
-                        <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
+                        <p>My creative ability is very difficult to measure because it can manifest in so many
+                            surprising and.</p>
                     </div>
                 </div>
-            
+
             </div>
         </div>
     </div>
     <!--End Portfolio-->
-    
+
     <!--Start About-->
     <div class="about" id="aAbout">
         <div class="container">
             <h2 class="special-heading">About</h2>
             <p>Less is more work</p>
             <div class="about-content">
-                <div class="image"> 
+                <div class="image">
                     <img src="Images/about.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora velit cum non, fuga vitae architecto delectus sed maxime rerum impedit aliquam obcaecati, aut excepturi iusto laudantium!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil nemo neque voluptate tempora
+                        velit cum non, fuga vitae architecto delectus sed maxime rerum impedit aliquam obcaecati, aut
+                        excepturi iusto laudantium!
                     </p>
                     <hr>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sapiente. Velit iure exercitationem dolores nesciunt dolore. Eum officiis dolorum hic voluptate quaerat minima, similique inventore esse, alias, sed quo officia?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus, sapiente. Velit iure
+                        exercitationem dolores nesciunt dolore. Eum officiis dolorum hic voluptate quaerat minima,
+                        similique inventore esse, alias, sed quo officia?
                     </p>
                 </div>
             </div>
@@ -189,9 +203,9 @@
                 <a href="mailto:abdelrahmanelhagrasy661@gmail.com?subject=Contact">leonagency@mail.com</a>
                 <div class="social">
                     <p>Find Us On Social Networks</p>
-                    <i class="fab fa-youtube"></i>  
+                    <i class="fab fa-youtube"></i>
                     <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-twitter"></i>    
+                    <i class="fab fa-twitter"></i>
                 </div>
             </div>
         </div>
@@ -199,8 +213,10 @@
     <!-- End contact -->
     <!--Start footer-->
     <div class="footer">
-            &copy; 2021 <span>Leon</span> All Right Reserved
+        &copy; 2021 <span>Leon</span> All Right Reserved
     </div>
     <!--End Footer-->
+    <script src="main.js"></script>
 </body>
+
 </html>
